--- a/experiments/data_exploration.ipynb
+++ b/experiments/data_exploration.ipynb
@@ -18,8 +18,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-19T11:25:36.945124Z",
-     "start_time": "2025-02-19T11:25:35.120853Z"
+     "end_time": "2025-02-19T18:03:23.292451Z",
+     "start_time": "2025-02-19T18:03:22.690477Z"
     }
    },
    "cell_type": "code",
@@ -62,26 +62,41 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-19T11:25:37.034293Z",
-     "start_time": "2025-02-19T11:25:36.994186Z"
+     "end_time": "2025-02-19T18:03:35.268646Z",
+     "start_time": "2025-02-19T18:03:35.260601Z"
     }
    },
    "cell_type": "code",
    "source": [
     "# Display the first few rows of the dataset\n",
-    "df.head()"
+    "df.head(20)"
    ],
    "id": "b6c3ec62e24ae2f6",
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "                                                text  language\n",
-       "0  klement gottwaldi surnukeha palsameeriti ning ...  Estonian\n",
-       "1  sebes joseph pereira thomas  på eng the jesuit...   Swedish\n",
-       "2  ถนนเจริญกรุง อักษรโรมัน thanon charoen krung เ...      Thai\n",
-       "3  விசாகப்பட்டினம் தமிழ்ச்சங்கத்தை இந்துப் பத்திர...     Tamil\n",
-       "4  de spons behoort tot het geslacht haliclona en...     Dutch"
+       "                                                 text    language\n",
+       "0   klement gottwaldi surnukeha palsameeriti ning ...    Estonian\n",
+       "1   sebes joseph pereira thomas  på eng the jesuit...     Swedish\n",
+       "2   ถนนเจริญกรุง อักษรโรมัน thanon charoen krung เ...        Thai\n",
+       "3   விசாகப்பட்டினம் தமிழ்ச்சங்கத்தை இந்துப் பத்திர...       Tamil\n",
+       "4   de spons behoort tot het geslacht haliclona en...       Dutch\n",
+       "5   エノが行きがかりでバスに乗ってしまい、気分が悪くなった際に助けるが、今すぐバスを降りたいと運...    Japanese\n",
+       "6   tsutinalar i̇ngilizce tsuutina kanadada albert...     Turkish\n",
+       "7   müller mox figura centralis circulorum doctoru...       Latin\n",
+       "8   برقی بار electric charge تمام زیرجوہری ذرات کی...        Urdu\n",
+       "9   シャーリー・フィールドは、サン・ベルナルド・アベニュー沿い市民センターとrtマーティン高校に...    Japanese\n",
+       "10  kemunculan pertamanya adalah ketika mencium ka...  Indonesian\n",
+       "11  barocco pt escândalo de ª página é um filme fr...   Portugese\n",
+       "12  association de recherche et de sauvegarde de l...      French\n",
+       "13  胡赛尼本人和小说的主人公阿米尔一样，都是出生在阿富汗首都喀布尔，少年时代便离开了这个国家。胡...     Chinese\n",
+       "14  한국에서 성씨가 사용되기 시작한 정확한 시기는 알 수 없으나 한자漢字 등 중국 문물...      Korean\n",
+       "15  การฟาดฟันของบรรดาสาวงามในกองประกวด miss beauty...        Thai\n",
+       "16  dorota rabczewska artistinimega doda sündinud ...    Estonian\n",
+       "17  diante destes gerenciamentos podendo ser feito...   Portugese\n",
+       "18  besemer s van der geest v murray j bijleveld c...   Portugese\n",
+       "19  महाराष्ट्र  मई  को भारत का राज्य बनाया गया था।...       Hindi"
       ],
       "text/html": [
        "<div>\n",
@@ -132,17 +147,92 @@
        "      <td>de spons behoort tot het geslacht haliclona en...</td>\n",
        "      <td>Dutch</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>エノが行きがかりでバスに乗ってしまい、気分が悪くなった際に助けるが、今すぐバスを降りたいと運...</td>\n",
+       "      <td>Japanese</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>tsutinalar i̇ngilizce tsuutina kanadada albert...</td>\n",
+       "      <td>Turkish</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>müller mox figura centralis circulorum doctoru...</td>\n",
+       "      <td>Latin</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>برقی بار electric charge تمام زیرجوہری ذرات کی...</td>\n",
+       "      <td>Urdu</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>シャーリー・フィールドは、サン・ベルナルド・アベニュー沿い市民センターとrtマーティン高校に...</td>\n",
+       "      <td>Japanese</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>kemunculan pertamanya adalah ketika mencium ka...</td>\n",
+       "      <td>Indonesian</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>barocco pt escândalo de ª página é um filme fr...</td>\n",
+       "      <td>Portugese</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>association de recherche et de sauvegarde de l...</td>\n",
+       "      <td>French</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>胡赛尼本人和小说的主人公阿米尔一样，都是出生在阿富汗首都喀布尔，少年时代便离开了这个国家。胡...</td>\n",
+       "      <td>Chinese</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>한국에서 성씨가 사용되기 시작한 정확한 시기는 알 수 없으나 한자漢字 등 중국 문물...</td>\n",
+       "      <td>Korean</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>การฟาดฟันของบรรดาสาวงามในกองประกวด miss beauty...</td>\n",
+       "      <td>Thai</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>dorota rabczewska artistinimega doda sündinud ...</td>\n",
+       "      <td>Estonian</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>diante destes gerenciamentos podendo ser feito...</td>\n",
+       "      <td>Portugese</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>besemer s van der geest v murray j bijleveld c...</td>\n",
+       "      <td>Portugese</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>महाराष्ट्र  मई  को भारत का राज्य बनाया गया था।...</td>\n",
+       "      <td>Hindi</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 2
+   "execution_count": 3
   },
   {
    "metadata": {},
