Add latex report

--- a/experiments/vocab_size.ipynb
+++ b/experiments/vocab_size.ipynb
@@ -780,8 +780,8 @@
     "from langlens.baseline.classifier import NaiveBayes\n",
     "from sklearn.preprocessing import normalize\n",
     "\n",
-    "from langlens.baseline.vectorize import vectorize_data\n",
     "from langlens.data import load, split\n",
+    "from langlens.vectorize import vectorize_data\n",
     "\n",
     "data_frame = load(\"../data/wili_subset_khan.csv\")\n",
     "train_data, val_data, test_data = split(data_frame)\n",
